[package]
name = "draft-sniffle"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.2"
opentelemetry = "0.25.0"
opentelemetry_sdk = "0.25.0"
opentelemetry-stdout = "0.25.0"
prost = "0.13"
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.12"

