[tool.poetry]
name = "draft-sniffle"
version = "0.1.0"
description = ""
authors = ["Adam Cavendish <GetbetterABC@yeah.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vllm = "^0.6.0"
pydantic = "^2.9.1"
pydantic-core = "^2.23.3"
annotated-types = "^0.7.0"
rpds-py = "^0.20.0"
jsonschema-specifications = "^2023.12.1"
httpx = "^0.27.2"
sniffio = "^1.3.1"
httpcore = "^1.0.5"
h11 = "^0.14.0"
anyio = "^4.4.0"
distro = "^1.9.0"
jiter = "^0.5.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.group.DEV.dependencies]
ruff = "^0.6.4"

# [tool.maturin]
# python-source = "python"
# module-name = "my_project._lib_name"
# features = ["pyo3/extension-module"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [build-system]
# requires = ["maturin>=1.0,<2.0"]
# build-backend = "maturin"

[plugins]
[plugins.pypi_mirror]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

